new color for mentor and mentor/bieb

--- a/css/style.css
+++ b/css/style.css
@@ -573,11 +573,11 @@ ul.team li a.verantwortlich {
 }
 
 ul.team li a.mentor {
-  background-color: #33DDDD;
+  background-color: #a3c781;
 }
 
 ul.team li a.mentorBieb {
-  background-color: #5AAF63;
+  background-color: #e37e6d;
 }
 
 ul.team li a.notVerified {
