renaming mentor to tutor

--- a/css/style.css
+++ b/css/style.css
@@ -570,11 +570,11 @@ ul.team li a.verantwortlich {
   background-color: #dcc27e;
 }
 
-ul.team li a.mentor {
+ul.team li a.tutor {
   background-color: #a3c781;
 }
 
-ul.team li a.mentorBieb {
+ul.team li a.tutorStoreManager {
   background-color: #e37e6d;
 }
 
