Bells: translations / one label for status switch on/off
Having the action next to a status switch is confusing to no end.
Instead, the switch should show if its label effect is enabled or not

This is going to break some tests right now. They need to be adjusted.

ForumPostForm unused since f0cdbf8aeb19ad3448c26ab3693823e1b2293c72

--- a/views/pages/Region/forum/showThread.twig
+++ b/views/pages/Region/forum/showThread.twig
@@ -3,9 +3,9 @@
         {% block content %}
             {% include 'partials/info.twig' with {'msg': 'forum.thread_is_inactive_description'} %}
             <div class="ui-padding" style="text-align:center;">
-                <a class="button" href="{{ activate_url }}">{{ 'forum.activate_thread'|trans }}</a>
+                <a class="button" href="{{ activate_url }}">{{ 'forum.thread.activate'|trans }}</a>
                 <a class="button" href="{{ delete_url }}"
-                   onclick="if(!confirm('{{ 'really_delete'|trans }}')){return false;}">{{ 'forum.delete_thread'|trans }}</a>
+                   onclick="if(!confirm('{{ 'really_delete'|trans }}')){return false;}">{{ 'forum.thread.delete'|trans }}</a>
             </div>
         {% endblock %}
     {% endembed %}
