StoreEdit: Re-Implement adding new store chains as REST API calls #609
(and getting existing ones are now in REST too of course)

only display "add store chains" button for store-chain managers + orga
and also check those permissions in the API handler

Creating new store categories is not affected by this change.

--- a/client/src/scss/bootstrap-theme.scss
+++ b/client/src/scss/bootstrap-theme.scss
@@ -104,7 +104,7 @@ $navbar-dark-hover-color: rgba(#ffffff, 1) ;
         font-size: 0.9rem;
         }
 
-        input.form-control {
+        input.form-control:not(.with-border) {
         padding-left: 0;
         border: none;
 
