StoreEdit: Add new store status "does no longer exist" #786
stores in this state are hidden on the map (and the region admin tool)

+ refactor store trafficlight, some related translations

removes the separate UI to change team status from storeview,
recommended to use the regular store-edit screen for that now

--- a/css/content.css
+++ b/css/content.css
@@ -253,7 +253,13 @@ a.linkrow span.item {
   padding-left: 17px;
 }
 
-.ampel span {
+.store-trafficlight {
+  display: inline-block;
+  text-decoration: none;
+}
+
+.ampel span,
+.store-trafficlight span {
   display: block;
   width: 17px;
   height: 17px;
