--- a/views/pages/Region/sidenav.twig
+++ b/views/pages/Region/sidenav.twig
@@ -10,9 +10,16 @@
 {% endembed %}
 
 <div id="signout_sure" title="{{ 'are_you_sure'|trans }}">
-    {% include 'partials/info.twig' with {'msg': 'group.really_quit_name'|trans({'%name%': region.name})} %}
-    {% include 'partials/info.twig' with {'msg': 'group.quitting_home_district_warning'|trans} %}
+    {% if region.isWorkGroup %}
+        {% include 'partials/info.twig' with {'msg': 'group.really_quit_workgroup'|trans({'%name%': region.name})} %}
+    {% else %}
+        {% if region.isHomeDistrict %}
+            {% include 'partials/info.twig' with {'msg': 'group.quitting_home_district_warning'|trans({'%name%': region.name})} %}
+        {% else %}
+            {% include 'partials/info.twig' with {'msg': 'group.really_quit_district'|trans({'%name%': region.name})} %}
+        {% endif %}
+    {% endif %}
     <input type="hidden" name="bid" class="bid" value="{{ region.id }}" />
 </div>
 
-{{ sidenav.menu_tree({'items': {'href': '#signout', 'name': 'group.quit_name'|trans({'%name%': region.name}) }}, 'group.quit'|trans) }}
+{{ sidenav.menu_tree({'items': {'href': '#signout', 'name': (region.isWorkGroup ? 'group.quit_name_workgroup' : 'group.quit_name_district')|trans({'%name%': region.name}) }}, 'group.quit'|trans) }}
