LegalLayout: hide header(menu) if scrolling to "accept" checkbox is hard
Browsers don't understand that sticky headers occupy space when they
scroll to required yet missing fields (such as the unticked checkbox).

For store managers and ambassadors, there's extra content between the
"Accept" checkbox and the "Submit" button, which can cause confusion.

On the legal page (and hopefully only there) we now hide their header.

--- a/views/layouts/base.twig
+++ b/views/layouts/base.twig
@@ -48,7 +48,9 @@
 
     <body class="{{ bodyClasses|join(' ') }}">
         {% include 'partials/becomeBezirk.twig' %}
-        {{ menu | raw }}
+        {% if not (hideMenu is defined and hideMenu) %}
+            {{ menu | raw }}
+        {% endif %}
         {% if broadcast_message %}
             <div class="inner inside msg-inside info">{{ broadcast_message | raw }}</div>
         {% endif %}
